Navigation alignment misaligned on the Ipad resolution(768X1028) corrected

--- a/src/frontend/org/voltdb/dbmonitor/css/resources/layout.css
+++ b/src/frontend/org/voltdb/dbmonitor/css/resources/layout.css
@@ -1275,6 +1275,10 @@ top: 3px;}
 		
 		 
  }
+
+@media (width: 768px) {
+	 #nav { left:180px;}
+	  }
 @media (max-width: 980px) { 
  
  .objectExplorer { float:none; width:94%; margin-bottom:15px; padding:3%;}
